--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
+    "@types/node": "^20.3.1",
     "nodemon": "^2.0.22"
   },
   "name": "44-server-project",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-  "devDependencies": {},
   "scripts": {
     "ts": "tsc --watch",
     "server": "nodemon ./dist",
