big commit 2weeks of work

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node ./dist/index.js",
     "ts": "tsc --watch",
     "server": "nodemon ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
