--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@types/node": "^20.3.1",
+    "mysql2": "^3.5.1",
     "nodemon": "^2.0.22"
   },
   "name": "44-server-project",
